# atomic-modify-general

./: CHANGELOG.md  LICENSE  README.md  atomic-modify-general.cabal
.github/workflows/: haskell-ci.yml
compat-atomic-modify-old/Data/IORef/AtomicModify/Generic/: UnsafeToPair.hs
compat-sa-size-old/Data/IORef/AtomicModify/: SmallArraySize.hs
compat-sa-size-recent/Data/IORef/AtomicModify/: SmallArraySize.hs
src/Data/IORef/: AtomicModify.hs
src/Data/IORef/AtomicModify/: Generic.hs
test/: Main.hs
